<resources>
    <string name="app_name">MovieTime</string>
    <string name="title_profile">Profile</string>
    <string name="title_movies">Movies</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="title_images">Images</string>
    <string name="title_location">Location</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="popular_movies">Popular Movies</string>
    <string name="rated_movies">Rated Movies</string>
    <string name="recommended_movies">Recommended Movies</string>

    <!--Profile-->
    <string name="name">Name</string>
    <string name="popularity">Popularity</string>
    <string name="Known_for_department">Known For Department</string>
    <string name="popularity_points">%1$s points</string>


    <string name="select_image_from_gallery">select image from gallery</string>
    <string name="upload_image">Upload Image</string>
    <string name="image_upload_successfully">The image %1$s was successfully uploaded</string>
    <string name="image_upload_failed">Image upload was not successful</string>

    <string name="API_KEY">AIzaSyCVvplxzO6G5faOejsIBhT887feSOAU5Pg</string>
    <string name="marker_sydney">Marker in Sydney</string>

    <string name="remote_data_failed">it was not possible to obtain remote data</string>
    <string name="local_data_failed">it was not possible to obtain local data</string>
    <string name="unexpected_error_occurred">An unexpected error occurred</string>
    <string name="without_title">without title</string>
    <string name="known_for">Known For:</string>

    <string name="loading">Loading</string>
</resources>