<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@+id/navigation_profile">

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.acsoft.movietime.feature_profile.presentation.most_popular.MostPopularPersonProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_most_popular_person_profile" />

    <fragment
        android:id="@+id/navigation_movies"
        android:name="com.acsoft.movietime.feature_movies.presentation.MoviesFragment"
        android:label="@string/title_movies"
        tools:layout="@layout/fragment_movies" />

    <fragment
        android:id="@+id/navigation_images"
        android:name="com.acsoft.movietime.feature_images.presentation.LoadImagesFragment"
        android:label="@string/title_images"
        tools:layout="@layout/fragment_load_images" />
</navigation>