<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".feature_movies.presentation.MoviesFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/popular_movies"
            android:layout_marginStart="@dimen/dimen_8_dp"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_20_sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_popular_movies"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_160_dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/rated_movies"
            android:layout_marginStart="@dimen/dimen_8_dp"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_20_sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_rated_movies"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_160_dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/recommended_movies"
            android:layout_marginStart="@dimen/dimen_8_dp"
            android:layout_marginTop="@dimen/dimen_20_dp"
            android:textStyle="bold"
            android:textSize="@dimen/dimen_20_sp"/>

        <androidx.recyclerview.widget.RecyclerView
            android:id="@+id/rv_recommendations_movies"
            android:layout_width="match_parent"
            android:layout_height="@dimen/dimen_160_dp"
            android:orientation="horizontal"
            app:layoutManager="androidx.recyclerview.widget.LinearLayoutManager"/>

    </LinearLayout>

</ScrollView>